...

    <Button
        android:id="@+id/main_photo_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/description_layout"
        app:layout_constraintEnd_toStartOf="@id/main_file_button"
        app:layout_constraintTop_toBottomOf="@id/real_estate_photo"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="5dp"
        android:text="@string/camera"
        app:icon="@drawable/ic_baseline_photo_camera_24"
        android:backgroundTint="@color/colorPrimary100"/>

...
