...
    <string name="train_chip">train</string>
    <string name="metro_chip">metro/tram</string>
    <string name="main_picture_text">MAIN PICTURE</string>
    <string name="rooms_picture_text">ROOMS PICTURE</string>
    <string name="rooms_description_hint">Room description</string>
    <string name="camera">CAMERA</string>
    <string name="storage">STORAGE</string>

    //List
    <string name="location">%1$s, %2$s</string>
    <string name="euro_price_list">€ %1$s</string>
    <string name="dollar_price_list">$ %1$s</string>

...
