...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true" />
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@id/bot_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
